[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Control/Hud.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Models/ussr male.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://sounds/player/step/pl_step1.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/AnimController.gd" type="Script" id=5]
[ext_resource path="res://scenes/Weapon.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/dryfire1.wav" type="AudioStream" id=7]
[ext_resource path="res://scripts/control/screenshot.gd" type="Script" id=8]
[ext_resource path="res://scripts/SpawnPointController.gd" type="Script" id=9]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=10]
[ext_resource path="res://sounds/player/pain/pl_pain2.wav" type="AudioStream" id=11]

[sub_resource type="CapsuleShape" id=1]
radius = 0.328034
height = 1.25

[sub_resource type="Animation" id=2]
resource_name = "crouch"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerCollision:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerCollision:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.25, 0.75 ]
}
tracks/2/type = "transform"
tracks/2/path = NodePath("PlayerCollision")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = PoolRealArray(  )
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerCollision:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.949999, 3.27832e-09 ), Vector3( 0, 0.7, 0 ) ]
}
tracks/4/type = "transform"
tracks/4/path = NodePath("Camera")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = PoolRealArray(  )
tracks/5/type = "value"
tracks/5/path = NodePath("Camera:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.75, 0 ), Vector3( 0, 1.25, 0 ) ]
}

[node name="Player" type="KinematicBody"]
input_capture_on_drag = true
script = ExtResource( 3 )

[node name="PlayerCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.949999, 3.27832e-09 )
shape = SubResource( 1 )

[node name="Steps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Pain" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="FlashlightToggle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -4.0

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="InvulTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Screenshot" type="Node" parent="."]
script = ExtResource( 8 )
shortcut_action = "ui_screenshot"

[node name="SpawnPointController" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )
cull_mask = 524287
current = true
fov = 90.0
far = 200.0
script = ExtResource( 10 )

[node name="Weapon" parent="Camera" instance=ExtResource( 6 )]

[node name="Flashlight" type="SpotLight" parent="Camera"]
visible = false
light_energy = 3.0
spot_range = 20.0
spot_angle = 30.0

[node name="AnimController" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="ussr_male" parent="AnimController" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )

[node name="Hud" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/crouch = SubResource( 2 )
[connection signal="timeout" from="StepTimer" to="." method="_on_StepTimer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="InvulTimer" to="." method="_on_InvulTimer_timeout"]
